# Secure_Reveiw

./: .gitignore  BLOG.md  Dockerfile  GUIDE.md  OpenEnv hackathon environment research  README.md  Securereview_spec.md  inference.py  openenv.yaml  pasted_content.md  pyproject.toml  requirements.txt  train_grpo.ipynb
app/: environment.py  landing.py  main.py  models.py
app/graders/: base.py  dependency_grader.py  iac_grader.py  migration_grader.py
app/tasks/: task_registry.py
app/tasks/scenarios/dependency/scenario_001/: ground_truth.json  requirements.txt
app/tasks/scenarios/dependency/scenario_002/: ground_truth.json  requirements.txt
app/tasks/scenarios/dependency/scenario_003/: ground_truth.json  package.json
app/tasks/scenarios/dependency/scenario_004/: ground_truth.json  requirements.txt
app/tasks/scenarios/dependency/scenario_005/: ground_truth.json  requirements.txt
app/tasks/scenarios/dependency/scenario_006/: ground_truth.json  requirements.txt
app/tasks/scenarios/dependency/scenario_007/: ground_truth.json  (+1 more)
resources/: faq.md  hackathon_self_Serve_guid.md  resourcesandmaterials.md
server/: app.py
training_results/: RESULTS.md  SCENARIOS.md  dep_sft_logs.txt  dep_sft_summary.md  grader_fix_iac.md  grader_fix_migration.md  iac_sft_logs.txt  iac_sft_summary.md  migration_sft_logs.txt  migration_sft_summary.md
training_results/plots/: render_plots.py
training_results/plots/dep/: results.json
training_results/plots/iac/: results.json
training_results/plots/migration/: results.json
training_space/: README.md  app.py  requirements.txt  train.py
training_space/sft_variants/: train_sft_dep.py  train_sft_iac.py  train_sft_migration.py
(+220 files in other folders)
