[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-securereview"
version = "1.0.0"
description = "SecureReview OpenEnv environment — AI security code review across dependency supply chains, infrastructure-as-code, and database migrations"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Team CookHouse" },
]
keywords = ["openenv", "security", "code-review", "agent", "evaluation", "rl"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "openenv-core>=0.2.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "openai>=1.0.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://huggingface.co/spaces/sam25kat/securereview"
Repository = "https://github.com/sam25kat/Secure_Reveiw"
Documentation = "https://huggingface.co/spaces/sam25kat/securereview"

[project.scripts]
server = "server.app:main"

[tool.setuptools]
include-package-data = true
packages = [
    "app",
    "app.graders",
    "app.tasks",
    "server",
]

[tool.setuptools.package-data]
"app.tasks" = ["scenarios/**/*"]
